# embed

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  REUSE_PLAN.md  USAGE.md
snn-core/: Cargo.toml
snn-core-plus/: Cargo.toml
snn-core-plus/src/: embedded_network.rs  error.rs  fixed.rs  fixed_point.rs  hypergraph.rs  ir.rs  lib.rs  plasticity.rs  rtic_support.rs  runtime_plus.rs  sparse.rs
snn-core/src/: event_queue.rs  lib.rs  neuron.rs  runtime.rs
snn-tui/: Cargo.toml
snn-tui/src/: app.rs  backend.rs  main.rs  ui.rs
