[package]
name = "snn-core-plus"
version = "0.1.0"
edition = "2021"
description = "Extended runtime for snn-core with adjacency, budgets, and optional plasticity (keeps snn-core unchanged)"
license = "MIT OR Apache-2.0"

[lib]
name = "snn_core_plus"
path = "src/lib.rs"

[dependencies]
# Depend on the minimal zero-dep core for TimeWheel/SpikeEvent/HyperEdge interop
snn-core = { path = "../snn-core" }
# Optional for embedded/no_std data structures
heapless = { version = "0.8", optional = true }

[features]
# Use std by default; disable to build in no_std mode
default = ["std"]
std = []

# Optional learning rules
plasticity = []

# Placeholder feature for future partitioning
partitioning = []

# Embedded mode: enables heapless-based structures and RTIC scaffolding
embedded = ["dep:heapless"]