[package]
name = "snn-tui"
version = "0.1.0"
edition = "2021"
description = "Researcher-friendly TUI for snn-core-plus with 2D spike raster"
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.28"
ratatui = "0.27"
anyhow = "1.0"

snn-core-plus = { path = "../snn-core-plus" }
snn-core = { path = "../snn-core" }

[features]
# Forward plasticity feature to snn-core-plus so the TUI can optionally enable it
plasticity = ["snn-core-plus/plasticity"]
default = []